Fix text spacing on predictions

--- a/static/css/scouting.css
+++ b/static/css/scouting.css
@@ -899,6 +899,11 @@ header .header-btn {
     transform: translate(-50%, 0);
 }
 
+.data-window h3 {
+    margin-bottom: 5px;
+    margin-top: 25px;
+}
+
 .red {
     color: #ff0000 !important;
 }
